<resources>
    <string name="personal">Personal</string>
    <string name="education">Education</string>
    <string name="skills">Skills</string>
    <string name="experiences">Experiences</string>
    <string name="portfolio">Portfolio</string>

    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="address">Address</string>

    <string name="_class">Class</string>
    <string name="passing_year">Passing Year</string>
    <string name="gpa">GPA</string>
    <string name="gpa_value">GPA %s</string>

    <string name="career_objective">Career Objective</string>
    <string name="total_year_of_experience">Total year of experience</string>

    <plurals name="year">
        <item quantity="one">year</item>
        <item quantity="many">years</item>
    </plurals>

    <string name="work_summary">Work Summary</string>

    <string name="project">Project</string>
    <string name="role">Role</string>
    <string name="tech_stack">Tech Stack</string>
    <string name="toggle_edit_mode">Toggle Edit Mode</string>
    <string name="toggle_demo_mode">Toggle Demo Mode</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="hint_name">Full name</string>
    <string name="hint_role">Role</string>
    <string name="hint_career_objective">Career Objective</string>
    <string name="hint_add_skill">Add Skill (Kotlin, Java)</string>

    <string name="hint_project_name">Project Name</string>
    <string name="hint_team_size">Team Size</string>
    <string name="hint_project_summary">Project Summary</string>
    <string name="hint_technology_used">Technology Used</string>
    <string name="hint_add_technology_used">Add Technology Used (Kotlin, Swift, Python)</string>

    <string name="hint_school_name">School Name</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_duration">Duration</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>

    <string name="hint_class">Class (X, XII, Graduation)</string>
    <string name="hint_passing_year">Passing Year (2016)</string>
    <string name="hint_gpa">GPA (4.00)</string>

    <string name="error_invalid_email_format">Invalid email format</string>
    <string name="error_required">Required</string>
    <string name="error_end_date_before_start">End date is before start date</string>
    <string name="error_no_item">No Item</string>

    <string name="dialog_discard_message">Discard draft?</string>

    <string name="helper_require">*required</string>
    <string name="helper_enter_to_add">Enter to add</string>

    <string name="confirmation">Confirmation</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>

</resources>