<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="28dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_padding"
            android:layout_marginTop="@dimen/screen_padding"
            android:gravity="start"
            android:text="@string/skills"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_mlarge"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_xmedium">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_xmedium" />
            </HorizontalScrollView>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_skill"
                style="@style/AddSkillEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_add_skill"
                android:imeOptions="actionDone"
                android:paddingVertical="@dimen/spacing_medium"
                android:singleLine="true"
                android:textColor="@color/grey_80" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:background="@color/grey_b6b6b6" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_save"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/speakerGroupView"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_mxlarge"
            android:background="@drawable/button_round_accent_bg"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>