<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.testanymind.presentation.feature.personal.PersonalInfoViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height=".5dp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/spacing_smlarge"
                android:paddingVertical="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_project_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_name"
                    app:boxBackgroundColor="@android:color/white"
                    app:endIconDrawable="@drawable/ic_outline_assignment_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorPrimaryLight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_project_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:text="@={viewModel.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_team_size"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smlarge"
                    android:hint="@string/hint_team_size"
                    app:boxBackgroundColor="@android:color/white"
                    app:endIconDrawable="@drawable/ic_outline_groups_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorPrimaryLight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_team_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.role}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_project_summary"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smlarge"
                    android:hint="@string/hint_project_summary"
                    app:boxBackgroundColor="@android:color/white"
                    app:endIconDrawable="@drawable/ic_outline_description_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorPrimaryLight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_project_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="@={viewModel.careerObjective}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_role"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smlarge"
                    android:hint="@string/role"
                    app:boxBackgroundColor="@android:color/white"
                    app:endIconDrawable="@drawable/ic_outline_work_outline_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorPrimaryLight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_role"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:text="@={viewModel.mobile}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_mxlarge"
                    android:gravity="start"
                    android:text="@string/hint_technology_used"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_xmedium">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chip_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_xmedium" />
                    </HorizontalScrollView>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_skill"
                        style="@style/AddSkillEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_add_technology_used"
                        android:imeOptions="actionDone"
                        android:paddingVertical="@dimen/spacing_medium"
                        android:singleLine="true"
                        android:textColor="@color/grey_80" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>