<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <com.google.android.material.card.MaterialCardView
        style="@style/cardViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        app:contentPaddingBottom="@dimen/spacing_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_mlarge"
                    android:layout_weight="1"
                    android:text="@string/personal"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/grey_90"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_edit_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_save"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="@dimen/spacing_mlarge"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_checkmark"
                        app:tint="@color/green_700" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_cancel"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="@dimen/spacing_mlarge"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_cross"
                        app:tint="@color/red_700" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_edit"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="@dimen/spacing_mlarge"
                        app:srcCompat="@drawable/ic_document_edit"
                        app:tint="@color/grey_700" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/spacing_mlarge"
                    app:srcCompat="@drawable/ic_user"
                    app:tint="@color/grey_icon_tint" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                style="@style/dividerInCardView"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.Disabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:hint="@string/mobile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    tools:text="099-4799456" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_email"
                style="@style/TextInputLayout.Disabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="puttipong@gmail.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_address"
                style="@style/TextInputLayout.Disabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="50/7 Village No.1 Padat Sub-district, Muang District, Chiang Mai, 50100" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>