<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.testanymind.presentation.view.PersonalInfoViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height=".5dp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/spacing_smlarge"
                android:paddingVertical="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_school_name"
                    app:boxBackgroundColor="@android:color/white"
                    app:endIconDrawable="@drawable/ic_outline_school_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorPrimaryLight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_school_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:text="@={viewModel.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smlarge"
                    android:hint="@string/hint_class"
                    app:boxBackgroundColor="@android:color/white"
                    app:endIconDrawable="@drawable/ic_baseline_class_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorPrimaryLight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_class_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:text="@={viewModel.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smlarge"
                    android:hint="@string/hint_passing_year"
                    app:boxBackgroundColor="@android:color/white"
                    app:endIconDrawable="@drawable/ic_outline_calendar_month_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorPrimaryLight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_passing_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.role}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smlarge"
                    android:hint="@string/hint_gpa"
                    app:boxBackgroundColor="@android:color/white"
                    app:endIconDrawable="@drawable/ic_outline_insert_chart_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorPrimaryLight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_gpa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.careerObjective}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>